@@ -103,24 +103,6 @@ configuration keys with the same names.
 @recursive: 
 
 
-<!-- ##### FUNCTION xfconf_channel_remove_property ##### -->
-<para>
-
-</para>
-
-@channel: 
-@property: 
-
-
-<!-- ##### FUNCTION xfconf_channel_remove_properties ##### -->
-<para>
-
-</para>
-
-@channel: 
-@property_base: 
-
-
 <!-- ##### FUNCTION xfconf_channel_get_properties ##### -->
 <para>
 
