@@ -7,8 +7,6 @@ xfconf_channel_new_with_property_base
 xfconf_channel_has_property
 xfconf_channel_is_property_locked
 xfconf_channel_reset_property
-xfconf_channel_remove_property
-xfconf_channel_remove_properties
 xfconf_channel_get_properties
 xfconf_channel_get_string
 xfconf_channel_get_string_list
